# pandoc-web-compiler

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.frontend  Makefile  README.md  deploy-build-pvc.yaml  deploy-db-pvc.yaml  deploy.yaml
.sqlx/: query-0a72e398b60b1cbcd2ca7354b281006dae839b9cb95ea59a773e8cbb5c96d9cd.json  query-0d3857b2145e7e3bbca8b10233687cb5a0f099da78d8b705c4691b812ee2c744.json  query-1049db39ad2b6dbcc2f4f74baea6bf282d2ade4fdbc2dff157887313407fe2a7.json  query-2217fcf15993214aadcd96a20c4988f89a97d7f157004b90a489c8a7dbd43603.json  query-2a4b50edc7b9b09a2fdeb19f7b97bf57756fb32600e0fc8f27b32f458de3744e.json  query-2d2c11f4dda5c0b0b63230d455aa9bff61acda083ff67e10f2e7361ca1af4d9a.json  query-2d975fd76271906e63cda1151d942f53aea6dc1ab50ba358844c96194913b152.json  query-3b11b5c432f8fce7471c9e7dbd2b45a7dd60ac8805b57d1a7d4f027cf0cfb9d1.json  query-483b479605868971226000bf68c6e6dd2784c6d201b0e538ad7d6bd8792a7984.json  query-5b787d42131f3c8a2aacae828b3e528f2a762e9e02553a7e230d1c0f73977836.json  query-7a2ee4865373ede2ae2fa1d8557b937b85b76f44e5c1d6120c98606081481966.json  query-7ed3542389b015d52594039e21d305c999c156ed88e97ac6f680b7541d94ccff.json  query-87c92262526e8682114f336635e3f4124e63e756c5ea699164652c80646aec94.json  query-8b0d8f8d5a2fe126923bfbdc97922b706f98178196bf94dcfa7245a1d73fd2a1.json  query-91b7f63139590f528b6630e7fd70bb5c074fb1abe1b79198a4cf97b023553dcd.json  query-9a085d47b4b079854aec4b68e8d0942b70430cf1647720df75abfe614018ea73.json  query-b658b1dc1e7b52f8489b232ba007b553db9e8b6bd0ae1f848df414953ed92a3f.json  query-c4075de30ccb51f97160dc74702ce3559ec1623cc4dfc7c1de222e85b400801b.json  query-c5e37c0ccdbfdb96eddcce188cbd87c05470b8223f003825a8ca591732669bdc.json  query-cd9c9247d70e9f9827bf688171a6a3e6538d1174bd5248da9e339d4a7daf1aa0.json  query-dad67a9299722a094e205b332b4aef11ece02cf816a29679880947947d43123f.json  query-db143f7fd60d84c6b77028f17c502d68b46bb6b82cc74e360c3ab02cef32e4c4.json  query-fdd5b65085876578946f97ce4aa153ce646fc3b814c1eb02e829a7a66c885640.json
ansible/: Makefile  caddy.conf  danya02_ca.crt  install.yaml  inventory.toml  pandoc-web-compiler.service
api/: Cargo.toml
api/src/: lib.rs  verification.rs
frontend/: Cargo.toml  index.html  package-lock.json  package.json
frontend/src/: debug_pow.rs  main.rs  order.rs  profile.rs  promocodes.rs  proof_of_work_agent.rs  upload.rs  worker.rs
migrations/: 20240208074443_add_accounts.sql  20240210212811_add_orders_table.sql  20240511153123_add_order_original_file_list.sql  20240511211615_add_logins.sql  20240512113955_add_promocodes.sql  20240519153637_add_account_verification.sql
src/: admin.rs  main.rs  manager.rs  pricing.rs  profile.rs  result.rs  upload.rs  worker.rs
src/verification/: proof_of_work.rs
