workspace = { members = [ "api","frontend"] }
[package]
name = "rudn-yamadharma-course-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
api = { version = "0.1.0", path = "api" }
axum = { version = "0.7.4", features = ["form", "ws", "multipart"] }
dotenvy = "0.15.7"
rand = "0.8.5"
safe-path = "0.1.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
