workspace = { members = [ "api","frontend"] }
[package]
name = "pandoc-web-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
api = { version = "0.1.0", path = "api" }
argon2 = "0.5.3"
async-recursion = "1.0.5"
axum = { version = "0.7.4", features = ["form", "ws", "multipart"] }
axum-macros = "0.4.1"
base64 = "0.22.1"
chrono = "0.4.34"
dotenvy = "0.15.7"
exec = "0.3.1"
itsdangerous = { version = "0.4.1", features = ["serde_json"] }
libc = "0.2.153"
mime_guess = "2.0.4"
nix = { version = "0.27.1", features = ["fs", "process", "resource", "time", "signal"] }
password-hash = { version = "0.5.0", features = ["alloc"] }
rand = "0.8.5"
safe-path = "0.1.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sha2 = "0.10.8"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["io"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"
uuid = { version = "1.8.0", features = ["v4"] }
