[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
api = { version = "0.1.0", path = "../api" }
gloo = "0.11.0"
js-sys = "0.3.68"
log = "0.4.20"
reqwest = { version = "0.11.24", features = ["json"] }
serde_json = "1.0.113"
shadow-clone = "1.2.1"
wasm-bindgen = "0.2.91"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.68", features = ["File", "FileSystemDirectoryEntry"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-autoprops = "0.4.1"
yew-bootstrap = "0.10.0"
yew-hooks = "0.3.0"
yew-router = "0.18.0"
zip = { version = "0.6.6", default-features = false, features = ["deflate", "flate2"] }
