[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
api = { version = "0.1.0", path = "../api" }
chrono = "0.4.38"
chrono-humanize = "0.2.3"
futures = "0.3.30"
gloo = "0.11.0"
js-sys = "0.3.68"
lazy_static = "1.5.0"
log = "0.4.20"
rayon-wasm = "1.6.2"
reqwest = { version = "0.11.24", features = ["json", "multipart"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.113"
sha2 = "0.10.8"
shadow-clone = "1.2.1"
size_format = "1.0.2"
urlencoding = "2.1.3"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.68", features = ["File", "FileSystemDirectoryEntry"] }
web-time = "1.1.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-agent = "0.3.0"
yew-autoprops = "0.4.1"
yew-bootstrap = "0.10.0"
yew-hooks = "0.3.0"
yew-router = "0.18.0"

[[bin]]
name="bin"
path = "src/main.rs"

[[bin]]
name="worker"
path = "src/worker.rs"
